app/assets/stylesheets/components/_navbar.scss
.navbar-lewagon {
  justify-content: space-between;
  background: $main-color;
}
.navbar-lewagon .navbar-collapse {
  flex-grow: 0;
}
.navbar-lewagon .navbar-brand img {
  width: 40px;

}
.navbar{
  height: 60px;
  padding-left: 0px;
  padding-top:0px;
  padding-bottom: 0px;
}
.navbar-icon{
  padding:10px;
  background-color: $second-color;
  color: $light-color;
  margin:0px;
}
.navbar-icon:hover{
  color:$yellow;
}
.navbar-brand-main{
  padding:0px;
  margin:0px;
}
.logo{
  width:60px;
  height:60px;
}
.logo img{
  background-color:$main-color;
}

// For Post#new to make the create post button at the bottom
.submit-fixed-bottom {
  background-color: #FFFFFF;
  overflow: hidden;
  position: fixed;
  bottom: 0;
  width: 100%;
  text-align:center;
}

